testing if i can commit

--- a/coloring/templates/coloring/index.html
+++ b/coloring/templates/coloring/index.html
@@ -36,8 +36,8 @@
 		    display: block;
 		}
 	</style>
-
 	<script type="text/javascript" canvas="canvas">
+	// vincent testing
 		window.onload = function() {
 			var canvas = document.getElementById('myCanvas');
 
