--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="{% static 'coloring/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'coloring/vendors/paper/paper-full.min.js' %}"></script>
 	<link rel="stylesheet" type="text/css" href="{% static 'coloring/css/new_interaction.css' %}" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<style type="text/css">
 		/* #color-palette {
@@ -130,7 +131,7 @@
 	<canvas id="myCanvas" width="750px" height="750px"></canvas>
 
 	<div id="bottom_ui">  
-		<span class="bottom_ui_tool" id="pen"> </span>
+		<span class="bottom_ui_tool" id="pen">  </span>
 		<span class="bottom_ui_tool" id="erase"> </span>
 		<span class="bottom_ui_tool" id="fill"> </span>
 		<span class="bottom_ui_tool" id="palette"> </span>
